fix: hide Background overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@ body {
 }
 
 body {
+  position: relative;
   display: grid;
   place-items: center;
   color: #ededed;
